[package]
name = "looker"
version = "0.1.0"
authors = ["Eva Harris <mail@gastrodon.io>"]
edition = "2018"

[lib]
name = "lib"
path = "lib/lib.rs"

[[bin]]
name = "binary"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chrono]
version = "0.4.10" # Same as serenity Cargo.toml

[dependencies.serenity]
version = "~0.10"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "~1"
features = ["macros", "rt-multi-thread"]
